--- a/app/views/prototypes/final-vacancies/retire.html
+++ b/app/views/prototypes/final-vacancies/retire.html
@@ -46,33 +46,61 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          To move to a different FE provider
+          Resignation - job change outside of education
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
         <label class="govuk-label govuk-checkboxes__label" for="waste-2">
-          To move to a role in education but outside FE
+          Resignation - job change within FE sector
         </label>
       </div>
 
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
         <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-          To move to a role outside education
+          Resignation - job change within education but not FE
         </label>
       </div>
 
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
         <label class="govuk-label govuk-checkboxes__label" for="waste-4">
-          To become self-employed
+          Resignation - career break
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
         <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-          Retired
+          Resignation - other
+        </label>
+      </div>
+
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
+        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
+          End of contract
+        </label>
+      </div>
+
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
+        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
+          Retirement
+        </label>
+      </div>
+
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
+        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
+          Redundancy - voluntary
+        </label>
+      </div>
+
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
+        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
+          Redundancy - compulsory
         </label>
       </div>
 
@@ -80,40 +108,16 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="citizenship-conditional" name="citizen" type="checkbox" value="email" data-aria-controls="conditional-citizenship-conditional">
         <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional">
-          Resigned - destination not known
+          Deceased
         </label>
       </div>
     
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-          Made redundant
-        </label>
-      </div>
+      
 
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
         <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-          Dismissed
-        </label>
-      </div>
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-          Career break
-        </label>
-      </div>
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-          Ill health or death
-        </label>
-      </div>
-
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-          Reason not known
+          Other
         </label>
       </div>
       
