--- a/app/views/prototypes/final-vacancies/difficult.html
+++ b/app/views/prototypes/final-vacancies/difficult.html
@@ -41,7 +41,7 @@
 
             <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span><br>
           
-            <br><br>
+            <br>
 
             <div class="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
@@ -51,7 +51,7 @@
                 </label>
                 
     
-              </div><br>
+              </div>
     
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
@@ -60,11 +60,20 @@
                 </label>
     
                 
-              </div><br>
+              </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
                 <label class="govuk-label govuk-checkboxes__label" for="waste-2">
                   Performing arts
+                </label>
+    
+                
+              </div>
+
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
+                <label class="govuk-label govuk-checkboxes__label" for="waste-2">
+                  We didn't have any difficulties with recruitment
                 </label>
     
                 
@@ -76,23 +85,8 @@
 
           
           </fieldset>
-        </div>
-        <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
-           
-            <div class="govuk-checkboxes">
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
-                <label class="govuk-label govuk-checkboxes__label" for="waste">
-                  We didn't have any difficulties with recruitment
-                </label>
-              </div>
-              
-              
-            </div>
+        </div><br>
         
-          </fieldset>
-        </div><br><br>
       
 
 
