--- a/app/views/prototypes/final-vacancies/staff-zero.html
+++ b/app/views/prototypes/final-vacancies/staff-zero.html
@@ -57,7 +57,7 @@
     </dt>
     
     <dd class="govuk-summary-list__actions">
-      <a class="govuk-link" href="edit">
+      <a class="govuk-link" href="delete-staff">
         Delete<span class="govuk-visually-hidden"></span>
       </a>
     </dd>
