--- a/app/views/prototypes/final-vacancies/list-staff-john-end.html
+++ b/app/views/prototypes/final-vacancies/list-staff-john-end.html
@@ -200,7 +200,7 @@
   
       </td>
       
-       <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+       <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="delete-staff">
         Delete<span class="govuk-table__cell--numeric"></span>
       </a></td></tr>
 </tr>
@@ -222,7 +222,7 @@
       Fixed term or temporary</p>
       </td>
       
-       <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+       <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="delete-staff">
         Delete<span class="govuk-table__cell--numeric"></span>
       </a></td></tr>
 </tr>
@@ -241,7 +241,7 @@
   Permanent</p>
         </td>
         
-         <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+         <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="delete-staff">
           Delete<span class="govuk-table__cell--numeric"></span>
         </a></td></tr>
   </tr>
@@ -281,7 +281,7 @@
       Fixed term or temporary</p>
         </td>
         
-         <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+         <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="delete-staff">
           Delete<span class="govuk-table__cell--numeric"></span>
         </a></td></tr>
   </tr></tr>
@@ -301,7 +301,7 @@
       Fixed term or temporary</p>
         </td>
        
-         <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+         <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="delete-staff">
           Delete<span class="govuk-table__cell--numeric"></span>
         </a></td></tr>
   </tr></tr>
@@ -321,7 +321,7 @@
     Part-time</p>
         </td>
         
-         <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+         <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="delete-staff">
           Delete<span class="govuk-table__cell--numeric"></span>
         </a></td></tr>
   </tr></tr>
