--- a/app/views/prototypes/second-form/delete-saved.html
+++ b/app/views/prototypes/second-form/delete-saved.html
@@ -51,13 +51,11 @@
                     
   </div>
 
-  <form action="/form-handler" method="post" novalidate>
+  <form>
 
-    <input type="hidden" name="answers-checked" value="true">
-
-    <a href="start-staff" class="govuk-button show-continue">
-Delete
-</a>
+    <button class="govuk-button govuk-button--warning"  data-module="govuk-button">
+      Delete
+    </button>
 
 &nbsp; &nbsp;
 
@@ -66,6 +64,8 @@ Delete
   
 
   </form>
+
+  
        
  </div>
 </div>
