--- a/app/views/prototypes/second-form/delete-saved.html
+++ b/app/views/prototypes/second-form/delete-saved.html
@@ -38,7 +38,7 @@
                 Delete your saved session
               </h1>
             </legend>
-           <p>Delete permanently. This action does not delete any submission you've already submitted.</p>
+           <p>Delete permanently. This action does not delete anything you've already submitted.</p>
             
           
 
