--- a/app/views/prototypes/final-vacancies/answers-contract.html
+++ b/app/views/prototypes/final-vacancies/answers-contract.html
@@ -349,7 +349,7 @@
 </fieldset><br>-->
 
 
-         <a href="complete-john" class="govuk-button show-continue" style="display: inline;">
+         <a href="complete-john-five" class="govuk-button show-continue" style="display: inline;">
       Back to summary list
     </a>
        
