--- a/app/views/prototypes/final-vacancies/delete-staff.html
+++ b/app/views/prototypes/final-vacancies/delete-staff.html
@@ -61,7 +61,7 @@
 
 &nbsp; &nbsp;
 
-<a href="staff-zero"  class="govuk-button govuk-button--secondary">Cancel</a>
+<a href="list-staff-john-end"  class="govuk-button govuk-button--secondary">Cancel</a>
 
   
 
