--- a/app/views/prototypes/final-vacancies/academic.html
+++ b/app/views/prototypes/final-vacancies/academic.html
@@ -266,11 +266,11 @@
         
         
        
-      </div><BR>
+      </div><br><br>
 
 
           <a href="highest-subject" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
