--- a/app/views/prototypes/final-vacancies/answers-job.html
+++ b/app/views/prototypes/final-vacancies/answers-job.html
@@ -43,7 +43,7 @@
               Teacher, manager
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="role">
                 Change<span class="govuk-visually-hidden"></span>
               </a>
             </dd>
@@ -59,7 +59,7 @@
               Teacher
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="role-main">
                 Change<span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
@@ -74,7 +74,7 @@
               Animal Care
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="qualification-type">
                 Change<span class="govuk-visually-hidden"> Ethnicity</span>
               </a>
             </dd>
@@ -88,7 +88,7 @@
               Level 2
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="highest-subject">
                 Change<span class="govuk-visually-hidden"> Disability</span>
               </a>
             </dd>
@@ -102,7 +102,7 @@
               Level 4
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="matha">
                 Change<span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
@@ -116,7 +116,7 @@
               Level 4
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="english">
                 Change<span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
@@ -130,7 +130,7 @@
               Level 4
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="what-teaching-qualification">
                 Change<span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
@@ -158,7 +158,7 @@
               Less than one year
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="what-training">
                 Change<span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
@@ -172,7 +172,7 @@
               No
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="industry">
                 Change<span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
@@ -349,7 +349,7 @@
 </fieldset><br>-->
 
 
-         <a href="complete-john" class="govuk-button show-continue" style="display: inline;">
+         <a href="complete-john-four" class="govuk-button show-continue" style="display: inline;">
       Back to summary list
     </a>
        
