--- a/app/views/prototypes/final-vacancies/english.html
+++ b/app/views/prototypes/final-vacancies/english.html
@@ -168,7 +168,7 @@
 
 
           <a href="what-teaching-qualification" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
