--- a/app/views/prototypes/final-vacancies/highest-subject.html
+++ b/app/views/prototypes/final-vacancies/highest-subject.html
@@ -165,7 +165,7 @@
 
 
           <a href="maths" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
