--- a/app/views/prototypes/final-vacancies/industry2.html
+++ b/app/views/prototypes/final-vacancies/industry2.html
@@ -79,7 +79,7 @@
 
 
           <a href="complete-john-four" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
