--- a/app/views/prototypes/final-vacancies/maths.html
+++ b/app/views/prototypes/final-vacancies/maths.html
@@ -167,7 +167,7 @@
 
 <br>
           <a href="english" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div><br>
