--- a/app/views/prototypes/final-vacancies/what-training.html
+++ b/app/views/prototypes/final-vacancies/what-training.html
@@ -124,7 +124,7 @@
 
 
           <a href="funding" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
