--- a/app/views/prototypes/final-vacancies/funding.html
+++ b/app/views/prototypes/final-vacancies/funding.html
@@ -76,7 +76,7 @@
 
 
           <a href="teaching-qualification" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
