--- a/app/views/prototypes/final-vacancies/industry.html
+++ b/app/views/prototypes/final-vacancies/industry.html
@@ -109,7 +109,7 @@
 
 
           <a href="industry2" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
