--- a/app/views/prototypes/final-vacancies/teaching-qualification.html
+++ b/app/views/prototypes/final-vacancies/teaching-qualification.html
@@ -125,7 +125,7 @@
 
 
           <a href="industry" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
