--- a/app/views/prototypes/final-vacancies/what-teaching-qualification.html
+++ b/app/views/prototypes/final-vacancies/what-teaching-qualification.html
@@ -147,7 +147,7 @@
 
 
           <a href="what-training" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
