contract change page

--- a/app/views/prototypes/final-vacancies/answers-contract.html
+++ b/app/views/prototypes/final-vacancies/answers-contract.html
@@ -43,7 +43,7 @@
               One
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="what-contract">
                 Change<span class="govuk-visually-hidden"></span>
               </a>
             </dd>
@@ -59,7 +59,7 @@
               Permanent
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="contract">
                 Change<span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
@@ -74,7 +74,7 @@
               £23000
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="salary">
                 Change<span class="govuk-visually-hidden"> Ethnicity</span>
               </a>
             </dd>
@@ -88,7 +88,7 @@
               37
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="contracted-hours">
                 Change<span class="govuk-visually-hidden"> Disability</span>
               </a>
             </dd>
@@ -102,7 +102,7 @@
               0.9
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="fte">
                 Change<span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
@@ -116,7 +116,7 @@
               23
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="leave">
                 Change<span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
@@ -130,7 +130,7 @@
               20.09.2019
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="date">
                 Change<span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
@@ -144,7 +144,7 @@
               1 to 3 years
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="how-long-role">
                 Change<span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
@@ -158,7 +158,7 @@
               4 to 10 years
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="how-long-education">
                 Change<span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
@@ -172,7 +172,7 @@
             Yes
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="edit">
+              <a class="govuk-link" href="date-stop">
                 Change<span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
