--- a/app/views/prototypes/final-vacancies/answers-staff.html
+++ b/app/views/prototypes/final-vacancies/answers-staff.html
@@ -60,7 +60,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="edit">
-                Change<span class="govuk-visually-hidden"> Sex</span>
+                <span class="govuk-visually-hidden"> Sex</span>
               </a>
             </dd>
           </div>
@@ -75,7 +75,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="edit">
-                Change<span class="govuk-visually-hidden"> Ethnicity</span>
+                <span class="govuk-visually-hidden"> Ethnicity</span>
               </a>
             </dd>
           </div>
@@ -89,7 +89,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="edit">
-                Change<span class="govuk-visually-hidden"> Disability</span>
+                <span class="govuk-visually-hidden"> Disability</span>
               </a>
             </dd>
           </div>
@@ -265,7 +265,7 @@
 </fieldset><br>-->
 
 
-         <a href="complete-john" class="govuk-button show-continue" style="display: inline;">
+         <a href="complete-john-five" class="govuk-button show-continue" style="display: inline;">
       Back to summary list
     </a>
        
