All save and continue

--- a/app/views/prototypes/final-vacancies/contracted-hours.html
+++ b/app/views/prototypes/final-vacancies/contracted-hours.html
@@ -76,7 +76,7 @@
 
 
           <a href="fte" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
