--- a/app/views/prototypes/final-vacancies/date-stop.html
+++ b/app/views/prototypes/final-vacancies/date-stop.html
@@ -106,7 +106,7 @@
 
 
           <a href="retire" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
