--- a/app/views/prototypes/final-vacancies/date.html
+++ b/app/views/prototypes/final-vacancies/date.html
@@ -80,7 +80,7 @@
 
 
           <a href="how-long-role" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
