--- a/app/views/prototypes/final-vacancies/fte.html
+++ b/app/views/prototypes/final-vacancies/fte.html
@@ -59,7 +59,7 @@
 
 
           <a href="leave" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
