--- a/app/views/prototypes/final-vacancies/leave.html
+++ b/app/views/prototypes/final-vacancies/leave.html
@@ -72,7 +72,7 @@
           
 
           <a href="date" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
         </form>
       </div>
