--- a/app/views/prototypes/final-vacancies/retire.html
+++ b/app/views/prototypes/final-vacancies/retire.html
@@ -134,7 +134,7 @@
 
 
           <a href="complete-john-five" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
