--- a/app/views/prototypes/final-vacancies/salary.html
+++ b/app/views/prototypes/final-vacancies/salary.html
@@ -77,7 +77,7 @@
           
 
           <a href="contracted-hours" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
         </form>
       </div>
