--- a/app/views/prototypes/final-vacancies/how-long-education.html
+++ b/app/views/prototypes/final-vacancies/how-long-education.html
@@ -99,7 +99,7 @@
 
 
           <a href="date-stop" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
