--- a/app/views/prototypes/final-vacancies/how-long-role.html
+++ b/app/views/prototypes/final-vacancies/how-long-role.html
@@ -81,7 +81,7 @@
 
 
           <a href="how-long-education" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
