--- a/app/views/prototypes/final-vacancies/difficult-reason.html
+++ b/app/views/prototypes/final-vacancies/difficult-reason.html
@@ -161,7 +161,7 @@
 
 
           <a href="apprentices" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
