--- a/app/views/prototypes/final-vacancies/start-page.html
+++ b/app/views/prototypes/final-vacancies/start-page.html
@@ -34,9 +34,9 @@
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">FE staff collection</h1>
-        <span class="govuk-caption-l">August 2020 to July 2021</span><br>
-
+        <h1 class="govuk-heading-xl">FE workforce data collection</h1>
+        <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span><br>
+        <h2 class="govuk-heading-m">Before you start</h2><br>
         <p class="govuk-body">Use this service to:</p>
 
         <ul class="govuk-list govuk-list--bullet">
@@ -58,7 +58,7 @@
         <h2 class="govuk-heading-m">What you'll need to tell us</h2>
 
 
-        <p class="govuk-body">Your recruitment activity, including:</p>
+        <p class="govuk-body">Your recruitment activity for:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>senior and management vacancies</li>
           <li>teaching vacancies</li>
@@ -66,7 +66,7 @@
           </ul>
           <br>
           
-          <p class="govuk-body">Your staff:</p>
+          <p class="govuk-body">Your staff details:</p>
           <ul class="govuk-list govuk-list--bullet">
             <li>personal details</li>
           <li>job role and level</li>
@@ -78,7 +78,7 @@
           <br><br>
           <h2 class="govuk-heading-m">Where to find your information</h2>
           
-          <p class="govuk-body">You will need to gather data from a variety of sources.</p>
+          <p class="govuk-body">You may need to gather the data from these sources:</p>
           <ul class="govuk-list govuk-list--bullet">
           <li>HR systems</li>
           <li>MI systems</li>
@@ -87,7 +87,7 @@
           <li>CVs</li>
           </ul>
           
-          <p>The data collection is open for six weeks, from the end of June. </p>
+          <p>The data collection is open for six weeks. </p>
       </div>
 
       <div class="govuk-grid-column-one-third">
