--- a/app/views/prototypes/final-vacancies/start-staff.html
+++ b/app/views/prototypes/final-vacancies/start-staff.html
@@ -45,7 +45,7 @@
         
 
         <p>If you receive direct funding from ESFA you must tell us about the staff who worked for you in this year. </p>
-        <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span><br>
+        <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span><br><br>
         <p>There are two parts to this collection. Save each section and return as many times as you need before you submit.</p>
         <table class="govuk-table">
           
