--- a/app/views/prototypes/final-vacancies/vacancies-subject.html
+++ b/app/views/prototypes/final-vacancies/vacancies-subject.html
@@ -586,7 +586,7 @@
   
 
           <a href="filled-or" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
  </div>
