--- a/app/views/prototypes/final-vacancies/apprentices.html
+++ b/app/views/prototypes/final-vacancies/apprentices.html
@@ -52,7 +52,7 @@
 </div><br>
 
           <a href="answers-provider" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
       </div>
