--- a/app/views/prototypes/final-vacancies/difficult.html
+++ b/app/views/prototypes/final-vacancies/difficult.html
@@ -91,7 +91,7 @@
 
 
           <a href="difficult-reason" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
  </div>
