--- a/app/views/prototypes/final-vacancies/filled-or.html
+++ b/app/views/prototypes/final-vacancies/filled-or.html
@@ -86,7 +86,7 @@
 
 
           <a href="difficult" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Save and continue
     </a>
        
  </div>
