--- a/app/views/prototypes/final-vacancies/answers-provider.html
+++ b/app/views/prototypes/final-vacancies/answers-provider.html
@@ -49,7 +49,7 @@
               2
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="many-vacancies">
                 Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
@@ -63,7 +63,7 @@
               1
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="many-vacancies-filled">
                 Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
@@ -79,7 +79,7 @@
               Performing arts - 1
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="vacancies-subject">
                 Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
@@ -97,7 +97,7 @@
               Performing arts - 1
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="filled-or">
                 Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
@@ -112,7 +112,7 @@
               Construction, Planning and the Built Environment, Digital / ICT 
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="difficult">
                 Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
@@ -128,7 +128,7 @@
               Digital / ICT - No applicants, Looking for more pay
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="difficult-reason">
                 Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
@@ -154,7 +154,7 @@
               2
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="apprentices">
                 Change
                 <span class="govuk-visually-hidden"> address</span>
               </a>
