--- a/app/views/prototypes/final-vacancies/fte.html
+++ b/app/views/prototypes/final-vacancies/fte.html
@@ -37,7 +37,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What is their full time equivalent?
+        What is the full time equivalent?
       </h1>
     </legend><br>
     
