--- a/app/views/prototypes/final-vacancies/role-main.html
+++ b/app/views/prototypes/final-vacancies/role-main.html
@@ -35,7 +35,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What is John's main role?
+        What was John's main role?
       </h1>
     </legend>
 
