--- a/app/views/prototypes/final-vacancies/salary.html
+++ b/app/views/prototypes/final-vacancies/salary.html
@@ -36,7 +36,7 @@
         <form action="/form-handler" method="post" novalidate>
           <div class="govuk-form-group">
             <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--xl" for="postcode">
-                What is their annual salary?
+                What was their annual salary?
               </label>
               
               <!--<span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>-->
