--- a/app/views/prototypes/final-vacancies/many-vacancies-filled.html
+++ b/app/views/prototypes/final-vacancies/many-vacancies-filled.html
@@ -18,9 +18,17 @@
 
  
   <a href="#" class="govuk-back-link">Back</a>
+  <div class="govuk-body account-info">
+    <div>
+        <span class="your-name" id="bannerUserName">Florence Bridger UKPRN:123456 </span><a class="account-link" href="details" id="signout-link">Sign out</a>
+    </div>
+
+
+</div>
 {% endblock %}
 
 {% block content %}
+
 
 
 <div class="govuk-grid-row">
