--- a/app/views/prototypes/final-vacancies/highest-subject.html
+++ b/app/views/prototypes/final-vacancies/highest-subject.html
@@ -17,6 +17,14 @@
 
  <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
+  <div class="govuk-body account-info">
+    <div>
+        <span class="your-name" id="bannerUserName">Florence Bridger UKPRN:123456 </span><a class="account-link" href="details" id="signout-link">Sign out</a>
+    </div>
+
+
+</div>
+ </div>
 
 {% endblock %}
 
