--- a/app/views/prototypes/final-vacancies/complete-john.html
+++ b/app/views/prototypes/final-vacancies/complete-john.html
@@ -4,7 +4,7 @@
   GOV.UK prototype kit
 {% endblock %}
 {% block beforeContent %}
-  <div class="govuk-phase-banner">
+<div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content">
     <strong class="govuk-tag govuk-phase-banner__content__tag">
       prototype
@@ -13,6 +13,16 @@
       This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
     </span>
   </p>
+</div>
+
+ 
+  <a href="#" class="govuk-back-link">Back</a>
+  <div class="govuk-body account-info">
+    <div>
+        <span class="your-name" id="bannerUserName">Florence Bridger UKPRN:123456 </span><a class="account-link" href="details" id="signout-link">Sign out</a>
+    </div>
+
+
 </div>
 
 {% endblock %}
