--- a/app/views/prototypes/final-vacancies/qualification-type.html
+++ b/app/views/prototypes/final-vacancies/qualification-type.html
@@ -18,6 +18,13 @@
 
  
   <a href="#" class="govuk-back-link">Back</a>
+  <div class="govuk-body account-info">
+    <div>
+        <span class="your-name" id="bannerUserName">Florence Bridger UKPRN:123456 </span><a class="account-link" href="details" id="signout-link">Sign out</a>
+    </div>
+
+
+</div>
 {% endblock %}
 
 {% block content %}
